--- a/android/src/Android/app/src/main/res/layout/activity_camera.xml
+++ b/android/src/Android/app/src/main/res/layout/activity_camera.xml
@@ -1,54 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/btnList"
-        android:layout_width="wrap_content"
+
+    <SurfaceView android:id="@+id/surface_camera"
+        android:layout_width="fill_parent"
+        android:layout_height="10dip"
+        android:layout_weight="0.9">
+    </SurfaceView>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/list"
-        android:visibility="visible" />
+        android:layout_weight="0.1"
+        android:background="#d11c211e">
 
-    <ImageButton
-        android:id="@+id/btnCamera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="96dp"
-        android:layout_toStartOf="@+id/imageView"
-        android:src="@drawable/camera" />
+        <ImageButton
+            android:id="@+id/btnGallery"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="51dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/camera_folder_white" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="173dp"
-        android:text="옷을 찍어주세요"
-        android:textSize="30dp"/>
+        <ImageButton
+            android:id="@+id/btnTakePicture"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/camera_button_white" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="102dp"
-        android:src="@mipmap/ic_launcher" />
 
-    <ImageButton
-        android:id="@+id/btnAlbum"
-        style="@android:style/Widget.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="107dp"
-        android:layout_marginEnd="71dp"
-        android:src="@drawable/list"/>
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="22dp"
+            android:layout_weight="0.1"
+            android:src="@drawable/toggle_button" />
 
-</RelativeLayout>
+
+    </RelativeLayout>
+</LinearLayout>
